--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -11,44 +11,34 @@
     - ansible_python_interpreter: /usr/bin/python3
     - ansible_host_key_checking: false
     - ansible_stdout_callback: yaml
-    - ENVIRONMENT: "{{ lookup('env','ENVIRONMENT') }}"
-    - TYPEORM_MIGRATIONS: "./src/migrations/*.ts"
-    - TYPEORM_MIGRATIONS_DIR: "./src/migrations"
-    - TYPEORM_CONNECTION: "postgres"
-    - TYPEORM_ENTITIES: "./src/modules/domain/**/*.entity.ts"
-    - TYPEORM_HOST: "{{ lookup('env','TYPEORM_HOST') }}"
-    - TYPEORM_PORT: "{{ lookup('env','TYPEORM_PORT') }}"
-    - TYPEORM_USERNAME: "{{ lookup('env','TYPEORM_USERNAME') }}"
-    - TYPEORM_PASSWORD: "{{ lookup('env','TYPEORM_PASSWORD') }}"
-    - TYPEORM_DATABASE: "{{ lookup('env','TYPEORM_DATABASE') }}"
+    
 
   pre_tasks:
     - name: "wait 600 seconds for target connection to become reachable/usable."
       wait_for_connection:
         timeout: 600
 
-    - name: 'install nodejs'
-      become: yes
-      apt:
-        update_cache: yes
-        name: ['nodejs', 'npm']
-        state: latest
-
-    - name: 'install pm2'
-      become: yes
-      npm:
-        name: pm2
-        global: yes
-        production: yes
-        state: present
-
     - name: 'install python for Ansible.'
       become: true
       raw: test -e /usr/bin/python3 || (apt -y update && apt install -y python3)
       changed_when: false
+
+  environment:
+    - TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION')}}"  
+    - TYPEORM_ENTITIES: "{{ lookup('env', 'TYPEORM_ENTITIES')}}"
+    - TYPEORM_HOST: "{{ lookup('env', 'TYPEORM_HOST')}}"
+    - TYPEORM_PORT: 5432
+    - TYPEORM_USERNAME: "{{ lookup('env', 'TYPEORM_USERNAME')}}"
+    - TYPEORM_PASSWORD: "{{ lookup('env', 'TYPEORM_PASSWORD')}}"
+    - TYPEORM_DATABASE: "{{ lookup('env', 'TYPEORM_DATABASE')}}"
+    - TYPEORM_MIGRATIONS: "{{ lookup('env', 'TYPEORM_MIGRATIONS')}}"
+    - TYPEORM_MIGRATIONS_DIR: "{{ lookup('env', 'TYPEORM_MIGRATIONS_DIR')}}"
+
+  
   
   roles:
     - configure-server
+    - configure-prometheus-node-exporter
 
 
 
