--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -1,24 +1,39 @@
 ---
-- name: "Create folder for extracted files"
-  file:
-    path: /home/ubuntu/backend
-    state: directory
-    mode: 0755
+- name: 'update and upgrade packages.'
+  become: true
+  apt:
+    upgrade: yes
+    update_cache: yes
 
-- name: Extract 'artifact.tar.gz' into '/home/ubuntu/backend'
-  ansible.builtin.unarchive:
-    src: ~/project/artifact.tar.gz
-    dest: /home/ubuntu/backend
+- name: remove unneeded dependancies
+  become: true
+  apt:
+    autoremove: yes
 
-- name: 'wait 60 seconds for target connection to become reachable/usable.'
-  wait_for_connection:
-    timeout: 60
+- name: install dependancies
+  become: true
+  apt:
+    name: ['nodejs', 'npm']
+    state: latest
+    update_cache: yes
 
-- name: Run server
+- name: install pm2
+  become: true
+  npm:
+    name: pm2
+    global: yes
+    state: latest
+    production: yes
+
+- name: extract artifact
+  become: true
+  unarchive:
+    src: files/artifact.tar.gz
+    dest: .
+
+- name: start app
   become: true
   shell: |
-    cd /home/ubuntu/backend
-    npm install
-    npm run build   
-    pm2 stop default
-    pm2 start npm --name "backend" -- start
+    pm2 delete all
+    pm2 start npm -- start
+    pm2 list
