--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -431,60 +431,49 @@ jobs:
 
   smoke-test:
     docker:
-      # Lightweight Docker image
-      - image: amazon/aws-cli
-      # - image: circleci/node:13.8.0
+      - image: alpine:latest
     steps:
+      - checkout            
       - run:
           name: Install dependencies
           command: |
-            curl -sL https://rpm.nodesource.com/setup_14.x | bash -            
-            yum -y install tar gzip git curl nodejs
-      # Checkout code from git
-      - checkout            
+            apk add --update curl aws-cli nodejs npm
+      - run:
+          name: Backend smoke test.
+          command: |
+            export BACKEND_IP=$(aws ec2 describe-instances \
+              --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+              --query 'Reservations[*].Instances[*].PublicIpAddress' \
+              --output text)
+            export API_URL="http://${BACKEND_IP}:3030"
+            echo "------------------------------------"
+            echo BACKEND_URL: ${API_URL}/api/status
+            echo "------------------------------------"
+            if curl -v --retry 5 --retry-max-time 120 "${API_URL}/api/status" | grep "ok"
+            then
+              echo "Backend Smoke Test Success"
+              return 0
+            else
+              echo "Backend Smoke Test Failed"
+              return 1
+            fi
       - run:
           name: Frontend smoke test.
           command: |
             # your code here
-            FRONTEND_URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-${AWS_DEFAULT_REGION}.amazonaws.com"
+            FRONTEND_URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"
             echo "---FRONTEND_URL---"
-            echo "${FRONTEND_URL}"
-            echo "---FRONTEND_URL---"
+            echo ${FRONTEND_URL}
             if curl -s $FRONTEND_URL | grep "Welcome"
             then
               echo "Frontend: up and running!!!"
-              exit 0
-            else
-              echo "Frontend: it seems it is not running..."
               exit 1
-            fi            
-      - attach_workspace:
-          # Here we have inventory.txt
-          at: ~/
-      - run:
-          name: Get backend url
-          command: |
-            # your code here
-            BACKEND_IP=$(grep -v "web" .circleci/ansible/inventory.txt)
-            BACKEND_STATUS_URL="http://${BACKEND_IP}:3030/api/status"
-            echo $BACKEND_STATUS_URL > ~/backend-url.txt
-            echo "---BACKEND_STATUS_URL---"
-            echo "${BACKEND_STATUS_URL}"
-            echo "---BACKEND_STATUS_URL---"
-      - run:
-          name: Backend smoke test.
-          command: |
-            # your code here
-            BACKEND_STATUS_URL=$(cat ~/backend-url.txt)
-            if curl -s $BACKEND_STATUS_URL | grep "ok"
-            then
-              echo "Backend: up and running!!!"
-              exit 0
             else
-              echo "Backend: it seems it is not running..."
+              echo "Frontend: smoke test failed..."
               exit 1
-            fi
-      # Here's where you will add some code to rollback on failure
+            fi           
+     
+         
       - destroy-environment
       - revert-migrations  
 
@@ -587,8 +576,8 @@ workflows:
           requires: [run-migrations]
       - deploy-backend:
           requires: [run-migrations]
-      # - smoke-test:
-      #     requires: [deploy-backend, deploy-frontend]
+      - smoke-test:
+          requires: [deploy-backend, deploy-frontend]
       # - cloudfront-update:
       #     requires: [smoke-test]
       # - cleanup:
