--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -441,24 +441,22 @@ jobs:
       - run:
           name: Backend smoke test.
           command: |
-            BACKEND_IP=$(aws ec2 describe-instances \
+            export BACKEND_IP=$(aws ec2 describe-instances \
               --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
               --query 'Reservations[*].Instances[*].PublicIpAddress' \
               --output text)
-            echo "${BACKEND_IP}"  
-            curl "http://${BACKEND_IP}:3030/api/status"
-            # export API_URL="http://${BACKEND_IP}:3030"
-            # echo "------------------------------------"
-            # echo BACKEND_URL: ${API_URL}/api/status
-            # echo "------------------------------------"
-            # if curl -v --retry 5 --retry-max-time 120 "${API_URL}/api/status" | grep "ok"
-            # then
-            #   echo "Backend Smoke Test Success"
-            #   return 0
-            # else
-            #   echo "Backend Smoke Test Failed"
-            #   return 1
-            # fi
+            export API_URL="http://${BACKEND_IP}:3030"
+            echo "------------------------------------"
+            echo BACKEND_URL: ${API_URL}/api/status
+            echo "------------------------------------"
+            if curl -v --retry 5 --retry-max-time 120 "${API_URL}/api/status" | grep "ok"
+            then
+              echo "Backend Smoke Test Success"
+              return 0
+            else
+              echo "Backend Smoke Test Failed"
+              return 1
+            fi
       - run:
           name: Frontend smoke test.
           command: |
