--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -439,16 +439,13 @@ jobs:
           command: |
             apk add --update curl aws-cli nodejs npm
       - run:
-          name: Backend smoke test.
+          name: Backend smoke test
           command: |
             export BACKEND_IP=$(aws ec2 describe-instances \
               --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
               --query 'Reservations[*].Instances[*].PublicIpAddress' \
               --output text)
-            export API_URL="http://${BACKEND_IP}:3030"
-            echo "------------------------------------"
-            echo BACKEND_URL: ${API_URL}/api/status
-            echo "------------------------------------"
+            export API_URL="http://${BACKEND_IP}:3030"            
             if curl "${API_URL}/api/status" | grep "ok"
             then
               echo "Backend Smoke Test Success"
@@ -458,7 +455,7 @@ jobs:
               return 1
             fi
       - run:
-          name: Frontend smoke test.
+          name: Frontend smoke test
           command: |
             # your code here
             FRONTEND_URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"
