--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -471,8 +471,8 @@ jobs:
             fi           
      
          
-      - destroy-environment
-      - revert-migrations  
+      # - destroy-environment
+      # - revert-migrations  
 
   cloudfront-update:
     docker:
