--- a/.circleci/ansible/roles/configure-server/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-server/tasks/main.yml
@@ -9,7 +9,7 @@
   apt:
     upgrade: yes
 
-- name: remove dependencies that are no longer required
+- name: remove dependencies 
   become: true
   apt:
     autoremove: yes
