--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -88,27 +88,7 @@ commands:
               npm install
               npm run migration:revert
             fi
-  
-
-  setup-backend-environment-variables:
-    description: Setup environment variables in "backend/.env" file
-    steps:
-      - run:
-          name: Add env variables to "backend/.env" file
-          working_directory: backend
-          command: |
-            echo "ENVIRONMENT=production" >> .env
-            echo "NODE_ENV=production" >> .env
-            echo "TYPEORM_CONNECTION=postgres" >> .env
-            echo "TYPEORM_MIGRATIONS_DIR=./src/migrations" >> .env
-            echo "TYPEORM_ENTITIES=./src/modules/domain/**/*.entity.ts" >> .env
-            echo "TYPEORM_MIGRATIONS=./src/migrations/*.ts" >> .env
-            echo "TYPEORM_HOST=$TYPEORM_HOST" >> .env
-            echo "TYPEORM_PORT=$TYPEORM_PORT" >> .env
-            echo "TYPEORM_USERNAME=$TYPEORM_USERNAME" >> .env
-            echo "TYPEORM_PASSWORD=$TYPEORM_PASSWORD" >> .env
-            echo "TYPEORM_DATABASE=$TYPEORM_DATABASE" >> .env
-
+ 
 
 jobs:
   build-frontend:
@@ -272,7 +252,7 @@ jobs:
   configure-infrastructure:
     docker:
       # Docker image here that supports Ansible
-      - image: python:3.7-alpine3.11
+      - image: python:3.11.8-alpine3.18
       # - image: circleci/node:13.8.0
     steps:
      
@@ -288,39 +268,15 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            apk add --update ansible
-      - run:
-          name: Install AWS-CLI
-          command: |
-            pip install awscli
-      - run:
-          name: Install OpenSSH
-          command: |
-            apk add openssh-client
+            apk add --update tar gzip aws-cli ansible
+      
             
       - run:
           name: Configure server
-          no_output_timeout: 20m
           command: |
-            pwd
-            touch ~/project/backend/.env
-            echo ENVIRONMENT=production >> "backend/.env"
-            echo TYPEORM_CONNECTION=$TYPEORM_CONNECTION>> "backend/.env"
-            echo TYPEORM_MIGRATIONS_DIR=$TYPEORM_MIGRATIONS_DIR >> "backend/.env"
-            echo TYPEORM_ENTITIES=$TYPEORM_ENTITIES >> "backend/.env"
-            echo TYPEORM_MIGRATIONS=$TYPEORM_MIGRATIONS >> "backend/.env"
-            echo TYPEORM_HOST=$TYPEORM_HOST >> "backend/.env"
-            echo TYPEORM_PORT=$TYPEORM_PORT >> "backend/.env"
-            echo TYPEORM_USERNAME=$TYPEORM_USERNAME >> "backend/.env"
-            echo TYPEORM_PASSWORD=$TYPEORM_PASSWORD >> "backend/.env"
-            echo TYPEORM_DATABASE=$TYPEORM_DATABASE >> "backend/.env"
-            cat backend/.env
-            cd .circleci/ansible/
+            cd .circleci/ansible
             cat inventory.txt
             ansible-playbook -i inventory.txt configure-server.yml
-          environment:
-            ANSIBLE_HOST_KEY_CHECKING: false
-      # Here's where you will add some code to rollback on failure
       - destroy-environment
 
   run-migrations:
