--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -395,8 +395,7 @@ jobs:
               --query 'Reservations[*].Instances[*].PublicIpAddress' \
               --output text)
             export API_URL="http://${BACKEND_IP}:3030"    
-            echo API_URL
-            echo BACKEND_URL: ${API_URL}/api/status        
+            echo "BACKEND_URL: ${API_URL}/api/status"        
             if curl "${API_URL}/api/status" | grep "ok"
             then
               echo "Backend Smoke Test Successful"
