--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -358,19 +358,34 @@ jobs:
             apk add --update tar gzip aws-cli ansible nodejs npm curl
       
       - run:
-          name: deploy backend
+          name: package backend
           no_output_timeout: 25m
           command: |
             cd backend
             npm install
             npm run build
+            tar -czf artifact.tar.gz dist/* package*
             cd ..
-            tar -C backend -czf artifact.tar.gz .
-            mkdir -p ~/project/.circleci/ansible/roles/deploy/files/
-            mv artifact.tar.gz .circleci/ansible/roles/deploy/files/artifact.tar.gz
+            cp backend/artifact.tar.gz .circleci/ansible/roles/deploy/files
+
+            # cd ..
+            # tar -C backend -czf artifact.tar.gz .
+            # mkdir -p ~/project/.circleci/ansible/roles/deploy/files/
+            # mv artifact.tar.gz .circleci/ansible/roles/deploy/files/artifact.tar.gz
+            # cd .circleci/ansible
+            # echo "Contents of the inventory.txt file is ------$(cat inventory.txt)"
+            # ansible-playbook -i inventory.txt deploy-backend.yml -vvv
+
+      - run:
+          name: Deploy backend
+          command: |
+            export TYPEORM_MIGRATIONS_DIR=./migrations
+            export TYPEORM_ENTITIES=./modules/domain/**/*.entity{.ts,.js}
+            export TYPEORM_MIGRATIONS=./migrations/*.ts
+
             cd .circleci/ansible
-            echo "Contents of the inventory.txt file is ------$(cat inventory.txt)"
-            ansible-playbook -i inventory.txt deploy-backend.yml -vvv
+            cat inventory.txt
+            ansible-playbook -i inventory.txt deploy-backend.yml
       
       - destroy-environment
       - revert-migrations
@@ -496,18 +511,18 @@ jobs:
 workflows:
   default:
     jobs:
-      - build-frontend
-      - build-backend
-      - test-frontend:
-          requires: [build-frontend]
-      - test-backend:
-          requires: [build-backend]
-      - scan-backend:
-          requires: [build-backend]
-      - scan-frontend:
-          requires: [build-frontend]
+      # - build-frontend
+      # - build-backend
+      # - test-frontend:
+      #     requires: [build-frontend]
+      # - test-backend:
+      #     requires: [build-backend]
+      # - scan-backend:
+      #     requires: [build-backend]
+      # - scan-frontend:
+      #     requires: [build-frontend]
       - deploy-infrastructure:
-          requires: [test-frontend, test-backend, scan-frontend, scan-backend]               
+          # requires: [test-frontend, test-backend, scan-frontend, scan-backend]               
           filters:
             branches:
               # only: [circleci-project-setup]
